<resources>
    <string name="app_name">Memory Bite</string>
    <string name="email">"MemoryBiteApp@gmail.com"</string>
    <string-array name="email_array">
            <item>@string/email</item>
    </string-array>
    <string name="version_number">Version: 1.95</string>
    <string name="release_date">Release Date: January 11, 2016</string>
    <string name="title_activity_open_screen">Memory Bite</string>
    <string name="title_activity_list_of_meals">Meal Journal</string>
    <string name="title_activity_meal_details">Meal Details</string>
    <string name="title_activity_input_meal">Enter Meal</string>

    <string name="restaurant_name">Restaurant Name</string>
    <string name="location">Location</string>
    <string name="cuisine_type">Cuisine Type</string>
    <string name="dined_with">Dined with</string>

    <string name="appetizers">Appetizers</string>
    <string name="main_courses">Main Courses</string>
    <string name="desserts">Desserts</string>
    <string name="drinks">Drinks</string>
    <string name="notes">Notes</string>
    <string name="style">Style</string>

    <string name="atmosphere">Atmosphere</string>
    <string name="atmosphere_1">Shack</string>
    <string name="atmosphere_2">Diner</string>
    <string name="atmosphere_3">Casual</string>
    <string name="atmosphere_4">Dressy</string>
    <string name="atmosphere_5">White Linen</string>

    <string name="price">Price</string>
    <string name="price_1">$</string>
    <string name="price_2">$$</string>
    <string name="price_3">$$$</string>
    <string name="price_4">$$$$</string>
    <string name="price_5">$$$$$</string>

    <string name="save">Save Meal</string>
    <string name="saved_meal_message">Meal saved!</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_new_meal">Add Meal</string>
    <string name="edit_last_meal">Edit Last Meal</string>
    <string name="view_journal">View Journal</string>
    <string name="add_photo">Add a Photo</string>
    <string name="add_caption">Add Caption</string>

    <string name="action_settings">Settings</string>
    <string name="about">About</string>

    <string name="ok">OK!</string>-


    <string name="share">Share</string>
    <string name="share_subject">Someone wants to share a Memory Bite from </string>
    <string name="share_body_intro">/nCheck out this meal I had!</string>
    <string name="share_body_closing">If you want to start and share your own food journal,
    check out www.MemoryBite.com or the Google Play Store.</string>

    <string name="send_to_chooser">Share using&#8230;</string>
    <string name="date">Date</string>

    <string name="dialog_delete_title">Delete?</string>
    <string name="dialog_delete_meal">Do you really want to delete this meal?
        \nThis can\'t be undone and food can\'t be uneaten!</string>

    <string name="dialog_about_body">I love food and I love eating new things in new places. I
        still can\'t believe my luck that I spent the better part of three years living in the
        wonderful city of New Orleans, sleeping on an air mattress so I could spend all of my money
        eating interesting meals like
        gas station boudin or Commander\'s Palace turtle soup.
        \n
        \nUnfortunately, as a side effect of this lifespan-shortening life style (and possibly
        from IPAs, sazeracs, and red wine) I was having a tough time keeping it all
        straight. After a point, you can\'t remember what was when and where with
        who. Since eating good food in the company of good people is one of life\'s great joys,
        forgetting these meals is a true sin to me.
        \n
        \nI made a few valiant efforts at carrying a notebook, but I was always caught without it.
        I tried general note taking apps, but it is slow, cumbersome, and clunky. I took photos
        that just got buried in my gallery, never to be seen again. Since I no longer have the
        distraction of New Orleans food and nightlife (and I might be mildly obsessive when a
        project is in mind), this is my attempt at a better way of remembering meals.
        \n
        \nI am not a programmer by education or occupation, so I have been learning along the way.
        You might find a few bugs and glitches here and there. Please, let me know and I\'ll do my
        best to correct them. Along the way, I will be updating and improving the user interface
        to make it as efficient as possible. And hopefully prettier, too.
        \n
        \nNow that I have the tool I wanted, I no longer live in New Orleans and I try to
        spend money on things other than restaurants, like decent clothes and actual furniture.
        Even though I may be missing a few meals from my journal, I hope it\'s something you find
        useful.
        \n
        \nPlease let me know your thoughts, questions, comments, or complaints.
        \nAndy Terbovich
        \n
        \n
        \nNOTE: Memory Bite currently stores meals locally on your phone and references your saved
        photos. I am working on providing cloud backup service for your journals, but for the
        moment your meal journal is saved only on the phone your app is on. Your journal will be
        saved when updating to newer versions of Memory Bite, but it will not carry over to new
        phones or devices. As of version 1.9, there is an export feature for building a PDF or CSV
        copy of your journal, but this is more of an interim solution until a proper cloud backup
        can be developed. Stay tuned for updates!
        \n
        \n
        \n
        \nSpecial thanks to:
        \nAmtrak for free WiFi through the barren desert of California\'s Central Valley.
        \nUdacity.com and Google for providing such incredible training materials.
        \nUniversal Image Loader &#169; 2011-2015 Sergey Tarasevich
        \nThe community at StackOverflow.com. I don\'t know who you are or why you answer all the
        programming questions you do, but keep doing it.
        \nZack for helping me with a logo.
        \nAll those who put up with my requests for beta testers along the way and for the
        constructive and not-so-constructive criticism you gave.
        \nMy family for teaching me the value of a good meal is not just the food.
        \n
        \n
        \nMemory Bite is provided as-is and is not responsible for any loss of or negative impacts on user\'s photos,
        written meal entries, or other data.
        \n
        \n
        &#169; 2015-2016, Andy Terbovich. All rights reserved
    </string>
    <string name="on">on</string> <!--Used as "on" as in "File exported ON 12/15/2015 -->


    <string name="help">What is this?</string>
    <string name="dialog_help_header">What is Memory Bite?</string>
    <string name="dialog_help_body">Memory Bite is a quick, lightweight food journal which tracks
        photos and notes of different meals and lets you quickly flip through your previous meals.
        You can even share with friends and family. It is intended to be fast and unobtrusive so
        that you can make entries without interrupting your meal.
        \n
        \nNow get started!
    </string>
    <string name="got_it">Got it!</string>

    <string name="comments_suggestions">Comments or suggestions?</string>
    <string name="photo_removed">POOF! Photo removed!</string>

    <string name="cant_add_photos">Can only attach 3 photos using this version of Memory Bite!</string>
    <string name="no_data_no_save_message">But you haven\'t eaten anything?
        \nEnter some data and try again!</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="select_file">Select File</string>
    <string name="no_meals">You don\'t have any meals to edit!</string>
    <string name="photo_menu_instructions">Tap to add photo details.</string>
    <string name="share_w_memory_bite">Email to Memory Bite</string>
    <string name="share_instructions">Share with a friend</string>
    <string name="share_w_memory_bite_instructions">Email to Memory Bite\'s website</string>

    <string name="error_taking_photo">There was an error using the camera. Please try selecting a photo from the gallery. Sorry!</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="sort_meals">Sort Meals</string>
    <string name="location_z_to_a">Location (Z to A)</string>
    <string name="location_a_to_z">Location (A to Z)</string>
    <string name="restaurant_z_to_a">Restaurant (Z to A)</string>
    <string name="restaurant_a_to_z">Restaurant (A to Z)</string>
    <string name="old_to_new">Oldest to Newest</string>
    <string name="new_to_old">Newest to Oldest</string>

    <string name="close">Close</string>
    <string name="export">Export Journal</string>
    <string name="toCSV">.CSV Format (No Photos)</string>
    <string name="toPDF">.PDF (Photos, LARGE FILE SIZE)</string>
    <string name="export_format">Choose a file format</string>
    <string name="export_subject">Memory Bite Journal Export</string>
    <string name="export_text">Food journal data exported from Memory Bite on </string>
    <string name="export_share_message">Send copy of export via...</string>
    <string name="export_file_name">MemoryBiteJournalExport</string>
    <string name="export_folder">/MemoryBite</string>
    <string name="journal_exported">Journal Exported!</string>
    <string name="journal_exported_message">Your journal has been exported and saved to the Documents folder on your device.
        \n\nDo you wish to email or share a copy of this file now?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="set_as_primary">Set as primary</string>
    <string name="photo_options">Photo options</string>
    <string name="remove">Remove from meal</string>
    <string name="photo_set_as_primary">Photo set as primary</string>

    <string name="close_X">X</string> <!--Used as a Close Window X. Do not translate -->

    <!-- Live Ad ID! -->
    <string name="banner_ad_unit_id">ca-app-pub-5493267843150526/3921546693</string>

    <!-- Test Ad ID! -->
    <!--
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    -->


    <string name="created_w_memory_bite">Created using Memory Bite.\nwww.MemoryBite.com</string>
    <string name="page">Pg.</string>
    <string name="search_hint">Search...</string>
    <string name="search_meals">Search meals</string>

    <string name="busy_exporting_message">Hold your horses, I\'m trying to export a file here!!
        \n\nI don\'t know why, but the PDF export crashes sporadically. If it does, check your Documents
        folder for a partial PDF. Try a few times; sometimes it goes through, sometimes it doesn\'t.
        Technically, I think it\'s related to available memory in your phone or maybe RAM. It might
        have something to do with specific photos. Maybe it\'s ghosts. Really,
        I have no idea. Please submit the crash report if it happens, so that I can try to
        figure it out. Thanks!\n\n    -Andy</string>
    <string name="change_list_size">Toggle List Size</string>

    <string name="default_font_file">fonts/kaushanscript.ttf</string>
    <string name="no_email_clients">There are no email clients installed.</string>
    <string name="photo_already_primary">This photo is already set as primary.</string>

</resources>
