<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="aterbo.MemoryBite.activities.ListOfMealsActivity">
    <item
        android:id="@+id/search_meals_menu"
        android:orderInCategory="40"
        android:title="@string/search_meals"
        android:icon="@mipmap/ic_search_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/sort_meals_menu"
        android:orderInCategory="50"
        android:title="@string/sort_meals"
        android:icon="@mipmap/ic_sort_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add_new_meal_menu"
        android:orderInCategory="60"
        android:title="@string/add_new_meal"
        android:icon="@mipmap/ic_add_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/edit_last_entry_menu"
        android:orderInCategory="70"
        android:title="@string/edit_last_meal"
        app:showAsAction="never" />
    <item
        android:id="@+id/export_menu"
        android:orderInCategory="80"
        android:title="@string/export"
        app:showAsAction="never" />
    <item
        android:id="@+id/toggle_list_size_menu"
        android:orderInCategory="85"
        android:title="@string/change_list_size"
        app:showAsAction="never" />
    <item
        android:id="@+id/about_menu"
        android:orderInCategory="90"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
