<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="aterbo.MemoryBite.MealDetails">

    <item
        android:id="@+id/share_meal_menu"
        android:icon="@mipmap/ic_share_white_24dp"
        android:orderInCategory="40"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/edit_meal_menu"
        android:icon="@mipmap/ic_create_white_24dp"
        android:orderInCategory="40"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/delete_meal_menu"
        android:icon="@mipmap/ic_delete_white_24dp"
        android:orderInCategory="50"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add_new_meal_menu"
        android:orderInCategory="60"
        android:icon="@mipmap/ic_add_white_24dp"
        android:title="@string/add_new_meal"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/edit_last_entry_menu"
        android:orderInCategory="70"
        android:title="@string/edit_last_meal"
        app:showAsAction="never" />
    <item
        android:id="@+id/view_journal_menu"
        android:orderInCategory="80"
        android:title="@string/view_journal"
        app:showAsAction="never" />
    <item
        android:id="@+id/about_menu"
        android:orderInCategory="90"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
