<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="aterbo.MemoryBite.OpenScreen">
    <item
        android:id="@+id/add_new_meal_menu"
        android:orderInCategory="60"
        android:title="@string/add_new_meal"
        android:icon="@mipmap/ic_add_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/edit_last_entry_menu"
        android:orderInCategory="70"
        android:title="@string/edit_last_meal"
        app:showAsAction="never" />
    <item
        android:id="@+id/view_journal_menu"
        android:orderInCategory="80"
        android:title="@string/view_journal"
        app:showAsAction="never" />
    <item
        android:id="@+id/export_menu"
        android:orderInCategory="80"
        android:title="@string/export"
        app:showAsAction="never" />
    <item
        android:id="@+id/about_menu"
        android:orderInCategory="90"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
